# edinet-mcp

./: .env.sample  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  README_ja.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
examples/: claude_desktop_config.json  quickstart.py
scripts/: codex_review.sh
src/edinet_mcp/: __init__.py  __main__.py  _cache.py  _config.py  _diff.py  _metrics.py  _narrative.py  _normalize.py  _rate_limiter.py  _screening.py  _validation.py  cli.py  client.py  models.py  parser.py  server.py
src/edinet_mcp/data/: taxonomy.yaml
tests/: conftest.py  test_cache.py  test_cli.py  test_client.py  test_diff.py  test_logging.py  test_metrics.py  test_models.py  test_narrative.py  test_normalize.py  test_parser.py  test_parser_security.py  test_rate_limiter.py  test_screening.py  test_server.py  test_validation.py
