[project]
name = "edinet-mcp"
version = "0.4.2"
description = "EDINET XBRL parsing library and MCP server for Japanese financial data"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["edinet", "xbrl", "mcp", "finance", "japan", "financial-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "polars>=0.20",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastmcp>=2.0,<3.0",
    "click>=8.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "vcrpy>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "types-defusedxml>=0.7",
]

[project.scripts]
edinet-mcp = "edinet_mcp.cli:cli"

[project.urls]
Homepage = "https://github.com/ajtgjmdjp/edinet-mcp"
Repository = "https://github.com/ajtgjmdjp/edinet-mcp"
Issues = "https://github.com/ajtgjmdjp/edinet-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [".env", ".env.*", ".mcpregistry_*", ".claude/"]

[tool.hatch.build.targets.wheel]
packages = ["src/edinet_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["edinet_mcp"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["edinet_mcp"]
mypy_path = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
